@@ -7,6 +7,8 @@
              thing (thanks to Rabbit).
     *   (ms) Fixed t/053Resurrect to work with 5.005_03
     *   (ms) Added callback function for init_and_watch()
+    *   (ms) Applied patch by Andy Grundman which speeds up is_LEVEL()
+             calls by skipping unnecessary string concatenations.
 
 1.17 (2008/07/19)
     *   (ms) Fixed test suite to run on Strawberry Perl on Win32.
